# goIt-python-web-10-Django_v2

./: pyproject.toml
quotes_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: about-author.html  author.html  base.html  index.html  quote.html  tag.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: forms.py  views.py
quotes_project/utils/: add_quotes_to_mongodb.py  authors.json  migration.py  quotes.json
